force-app/main/default/objects/Opportunity/fields/AAF_Class__c.field-meta.xml
<CustomField>
    <fullName>AAF_Class__c</fullName>
    <label>AAF Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A1</fullName>
            </value>
            <value>
                <fullName>B1</fullName>
            </value>
            <value>
                <fullName>C1</fullName>
            </value>
            <value>
                <fullName>Class 1</fullName>
            </value>
            <value>
                <fullName>Class 2</fullName>
            </value>
            <value>
                <fullName>Class 3</fullName>
            </value>
            <value>
                <fullName>Class 4</fullName>
            </value>
            <value>
                <fullName>Class 5</fullName>
            </value>
            <value>
                <fullName>Class 6</fullName>
            </value>
            <value>
                <fullName>Class 7</fullName>
            </value>
            <value>
                <fullName>Class 8</fullName>
            </value>
            <value>
                <fullName>Class 9</fullName>
            </value>
            <value>
                <fullName>Class 10+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>