force-app/main/default/objects/Opportunity/fields/Accredetation_Fee__c.field-meta.xml
<CustomField>
    <fullName>Accredetation_Fee__c</fullName>
    <label>Accredetation Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>