force-app/main/default/objects/Opportunity/fields/Affiliate_Name__c.field-meta.xml
<CustomField>
    <fullName>Affiliate_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Affiliate Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Account)</relationshipLabel>
    <relationshipName>Affiliate_Name</relationshipName>
    <type>Lookup</type>
</CustomField>