force-app/main/default/objects/Opportunity/fields/Affiliate_Opportunity_flag__c.field-meta.xml
<CustomField>
    <fullName>Affiliate_Opportunity_flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Affiliate Opportunity flag</label>
    <type>Checkbox</type>
</CustomField>