force-app/main/default/objects/Opportunity/fields/AllOCSharePointFolderId__c.field-meta.xml
<CustomField>
    <fullName>AllOCSharePointFolderId__c</fullName>
    <label>AllOCSharePointFolderId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>