force-app/main/default/objects/Opportunity/fields/AllOCSharePointFolderURL__c.field-meta.xml
<CustomField>
    <fullName>AllOCSharePointFolderURL__c</fullName>
    <label>AllOCSharePointFolderURL</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>