force-app/main/default/objects/Opportunity/fields/AllProjectSharePointFolderId__c.field-meta.xml
<CustomField>
    <fullName>AllProjectSharePointFolderId__c</fullName>
    <label>AllProjectSharePointFolderId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>