force-app/main/default/objects/Opportunity/fields/AllProjectSharePointFolderURL__c.field-meta.xml
<CustomField>
    <fullName>AllProjectSharePointFolderURL__c</fullName>
    <label>AllProjectSharePointFolderURL</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>