force-app/main/default/objects/Opportunity/fields/Bill_To_Address__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill To Address</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1</booleanFilter>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>CustomerSite</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Bill To Address)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>