force-app/main/default/objects/Opportunity/fields/Bill_To_Company__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill To Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Billing Opportunities</relationshipLabel>
    <relationshipName>Billing_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>