force-app/main/default/objects/Opportunity/fields/Bundle_Opportunity_Amount__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Opportunity_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>- sum of all bundle opp
- updated by flow &apos;Update Bundle Total Opportunity Amount&apos;
- appear only on bundle page layout as read only yo users</description>
    <label>Bundle Opportunity Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>