force-app/main/default/objects/Opportunity/fields/Bundle_Sub_Scope_Header__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Sub_Scope_Header__c</fullName>
    <label>Bundle Sub Scope Header</label>
    <length>255</length>
    <type>Text</type>
</CustomField>