force-app/main/default/objects/Opportunity/fields/Bundled_Scope__c.field-meta.xml
<CustomField>
    <fullName>Bundled_Scope__c</fullName>
    <inlineHelpText>This field should be used when you want generate Summary quote. This text will print in the product section</inlineHelpText>
    <label>Bundled Scope</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>