force-app/main/default/objects/Opportunity/fields/CheckContactRole__c.field-meta.xml
<CustomField>
    <fullName>CheckContactRole__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to check if Opportunity has contact role</description>
    <label>CheckContactRole</label>
    <type>Checkbox</type>
</CustomField>