force-app/main/default/objects/Opportunity/fields/Client_tax_ID_value__c.field-meta.xml
<CustomField>
    <fullName>Client_tax_ID_value__c</fullName>
    <description>This field is created to be printed on WO and Invoices based on conditions</description>
    <formula>IF(AND(NOT( ISNULL(Account.Client_Tax_ID__c)),  Print_Client_tax_ID__c ), Account.Client_Tax_ID__c, &quot;&quot;)</formula>
    <label>Client tax ID value</label>
    <type>Text</type>
</CustomField>