force-app/main/default/objects/Opportunity/fields/Closed_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Closed_Date_Time__c</fullName>
    <label>Closed Date Time</label>
    <type>DateTime</type>
</CustomField>