force-app/main/default/objects/Opportunity/fields/Closed_Lost_Date__c.field-meta.xml
<CustomField>
    <fullName>Closed_Lost_Date__c</fullName>
    <description>When the opportunity is marked as closed lost from any of the stages we should track that date on the page layout</description>
    <label>Closed Lost Date</label>
    <type>Date</type>
</CustomField>