force-app/main/default/objects/Opportunity/fields/CloseTime__c.field-meta.xml
<CustomField>
    <fullName>CloseTime__c</fullName>
    <formula>TIMEVALUE( Closed_Date_Time__c  - (7/24))</formula>
    <label>Close Time</label>
    <type>Time</type>
</CustomField>