force-app/main/default/objects/Opportunity/fields/Company_type__c.field-meta.xml
<CustomField>
    <fullName>Company_type__c</fullName>
    <label>Company type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Trader</fullName>
            </value>
            <value>
                <fullName>Manufacturer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>