force-app/main/default/objects/Opportunity/fields/Create_Sharepoint_Folder__c.field-meta.xml
<CustomField>
    <fullName>Create_Sharepoint_Folder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Sharepoint Folder</label>
    <type>Checkbox</type>
</CustomField>