force-app/main/default/objects/Opportunity/fields/DB_Competitor__c.field-meta.xml
<CustomField>
    <fullName>DB_Competitor__c</fullName>
    <label>DB Competitor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Competitor A</fullName>
            </value>
            <value>
                <fullName>Competitor B</fullName>
            </value>
            <value>
                <fullName>Competitor C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>