force-app/main/default/objects/Opportunity/fields/DMS_Billing_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>DMS_Billing_Contact_Id__c</fullName>
    <label>DMS Billing Contact Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>