force-app/main/default/objects/Opportunity/fields/DMS_Certificate_Id__c.field-meta.xml
<CustomField>
    <fullName>DMS_Certificate_Id__c</fullName>
    <label>DMS Certificate Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>