force-app/main/default/objects/Opportunity/fields/DMS_Client_Id__c.field-meta.xml
<CustomField>
    <fullName>DMS_Client_Id__c</fullName>
    <label>DMS Client Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>