force-app/main/default/objects/Opportunity/fields/DMS_Mapped__c.field-meta.xml
<CustomField>
    <fullName>DMS_Mapped__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DMS Mapped</label>
    <type>Checkbox</type>
</CustomField>