force-app/main/default/objects/Opportunity/fields/DMS_Primary_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>DMS_Primary_Contact_Id__c</fullName>
    <label>DMS Primary Contact Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>