force-app/main/default/objects/Opportunity/fields/DMS_Project_ID__c.field-meta.xml
<CustomField>
    <fullName>DMS_Project_ID__c</fullName>
    <label>DMS Project ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>