force-app/main/default/objects/Opportunity/fields/DMS_Site_Id__c.field-meta.xml
<CustomField>
    <fullName>DMS_Site_Id__c</fullName>
    <label>DMS Site Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>