force-app/main/default/objects/Opportunity/fields/EngagementTypeText__c.field-meta.xml
<CustomField>
    <fullName>EngagementTypeText__c</fullName>
    <formula>TEXT( Engagement_Type__c )</formula>
    <label>EngagementTypeText</label>
    <type>Text</type>
</CustomField>