force-app/main/default/objects/Opportunity/fields/Entity__c.field-meta.xml
<CustomField>
    <fullName>Entity__c</fullName>
    <label>Salesforce Entity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Entity</valueSetName>
    </valueSet>
</CustomField>