force-app/main/default/objects/Opportunity/fields/Estimated_Amount__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Enquiry stage of opportunity, I will not know which products to add. I need to add amount on opportunity for tracking purpose.</description>
    <label>Estimated Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>