force-app/main/default/objects/Opportunity/fields/External_Bill_To_Company_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Bill_To_Company_Id__c</fullName>
    <formula>Bill_To_Company__r.External_Record_Id__c</formula>
    <label>External Bill To Company Id</label>
    <type>Text</type>
</CustomField>