force-app/main/default/objects/Opportunity/fields/External_Billing_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Billing_Contact_Id__c</fullName>
    <formula>Billing_Contact__r.External_Record_Id__c</formula>
    <label>External Billing Contact Id</label>
    <type>Text</type>
</CustomField>