force-app/main/default/objects/Opportunity/fields/External_Entity_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Entity_Id__c</fullName>
    <formula>fw2__Entity__r.External_Record_Id__c</formula>
    <label>External Entity Id</label>
    <type>Text</type>
</CustomField>