force-app/main/default/objects/Opportunity/fields/External_Pricebook_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Pricebook_Id__c</fullName>
    <formula>Pricebook2.External_Record_Id__c</formula>
    <label>External Pricebook Id</label>
    <type>Text</type>
</CustomField>