force-app/main/default/objects/Opportunity/fields/fileforcem1__Sharepoint_Folder_Id__c.field-meta.xml
<CustomField>
    <fullName>fileforcem1__Sharepoint_Folder_Id__c</fullName>
    <description>Field that holds SharePoint&apos;s folder Id.</description>
    <inlineHelpText>Field that holds SharePoint&apos;s folder Id.</inlineHelpText>
    <label>SharePoint Folder Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>