force-app/main/default/objects/Opportunity/fields/Final_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Final_Invoice__c</fullName>
    <formula>1 - Account.Initial_Invoice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Invoice %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>