force-app/main/default/objects/Opportunity/fields/Final_Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>Final_Invoice_Amount__c</fullName>
    <label>Final Invoice Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>