force-app/main/default/objects/Opportunity/fields/Final_Invoice_Send_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Invoice_Send_Date__c</fullName>
    <label>Final Invoice Send Date</label>
    <type>DateTime</type>
</CustomField>