force-app/main/default/objects/Opportunity/fields/Forest_Products_Turnover__c.field-meta.xml
<CustomField>
    <fullName>Forest_Products_Turnover__c</fullName>
    <label>Forest Products Turnover</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>