force-app/main/default/objects/Opportunity/fields/fw1__Total_Applied_Credits__c.field-meta.xml
<CustomField>
    <fullName>fw1__Total_Applied_Credits__c</fullName>
    <label>Total Applied Credits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>