force-app/main/default/objects/Opportunity/fields/fw1__Total_Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>fw1__Total_Invoice_Amount__c</fullName>
    <label>Total Invoice Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>