force-app/main/default/objects/Opportunity/fields/fw2__Entity__c.field-meta.xml
<CustomField>
    <fullName>fw2__Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Following entities are valid- SCS Global, SCS Consulting, Ivory Coast and SCS Standards</inlineHelpText>
    <label>Entity</label>
    <referenceTo>fw1__Entity__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>