force-app/main/default/objects/Opportunity/fields/HasFile__c.field-meta.xml
<CustomField>
    <fullName>HasFile__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HasFile</label>
    <type>Checkbox</type>
</CustomField>