force-app/main/default/objects/Opportunity/fields/Include_Cover_Page__c.field-meta.xml
<CustomField>
    <fullName>Include_Cover_Page__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include Cover Page</label>
    <type>Checkbox</type>
</CustomField>