force-app/main/default/objects/Opportunity/fields/Initial_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Initial_Invoice__c</fullName>
    <formula>Account.Initial_Invoice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Initial Invoice %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>