force-app/main/default/objects/Opportunity/fields/Initial_Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>Initial_Invoice_Amount__c</fullName>
    <label>Initial Invoice Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>