force-app/main/default/objects/Opportunity/fields/Initial_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Initial_Invoice_Number__c</fullName>
    <label>Initial Invoice Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>