force-app/main/default/objects/Opportunity/fields/Initial_Invoice_Send_Date__c.field-meta.xml
<CustomField>
    <fullName>Initial_Invoice_Send_Date__c</fullName>
    <label>Initial Invoice Send Date</label>
    <type>DateTime</type>
</CustomField>