force-app/main/default/objects/Opportunity/fields/Is_Scope_Clone__c.field-meta.xml
<CustomField>
    <fullName>Is_Scope_Clone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Scope Clone ?</label>
    <type>Checkbox</type>
</CustomField>