force-app/main/default/objects/Opportunity/fields/Is_T_C_Clone__c.field-meta.xml
<CustomField>
    <fullName>Is_T_C_Clone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is T&amp;C Clone ?</label>
    <type>Checkbox</type>
</CustomField>