force-app/main/default/objects/Opportunity/fields/Lead_CreatedBy__c.field-meta.xml
<CustomField>
    <fullName>Lead_CreatedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead CreatedBy</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>