force-app/main/default/objects/Opportunity/fields/Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason__c</fullName>
    <label>Loss Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lost to Competitor</fullName>
            </value>
            <value>
                <fullName>No Budget / Lost Funding</fullName>
            </value>
            <value>
                <fullName>No Decision / Non-Responsive</fullName>
            </value>
            <value>
                <fullName>Cost/Price</fullName>
            </value>
            <value>
                <fullName>Not in line with SCS mission</fullName>
            </value>
            <value>
                <fullName>Bandwidth</fullName>
            </value>
            <value>
                <fullName>Lack of expertise</fullName>
            </value>
            <value>
                <fullName>Invoice Amount not received</fullName>
            </value>
            <value>
                <fullName>Customer didn’t sign PSA</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Delete</fullName>
            </value>
            <value>
                <fullName>Removed from Bundle Opportunity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>