force-app/main/default/objects/Opportunity/fields/OldSharePointFolderId__c.field-meta.xml
<CustomField>
    <fullName>OldSharePointFolderId__c</fullName>
    <label>OldSharePointFolderId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>