force-app/main/default/objects/Opportunity/fields/Opp_Closed_Week__c.field-meta.xml
<CustomField>
    <fullName>Opp_Closed_Week__c</fullName>
    <formula>IF(
AND(
Year(CloseDate) = Year(Today()),
SCSWeek__c = IF(CEILING( ( TODAY() - DATE( YEAR( TODAY() ), 1, 1) + 1) / 7) &gt; 52,52,CEILING( ( TODAY() - DATE( YEAR( TODAY() ), 1, 1) + 1) / 7))
),&quot;Current Week&quot;,
IF(
AND(
Year(CloseDate) = Year(Today()),
SCSWeek__c=IF(CEILING( ( TODAY() - DATE( YEAR( TODAY() ), 1, 1) + 1) / 7) &gt; 52,52,CEILING( ( TODAY() - DATE( YEAR( TODAY() ), 1, 1) + 1) / 7))-1),&quot;Last Week&quot;,TEXT(SCSWeek__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp Closed Week</label>
    <type>Text</type>
</CustomField>