force-app/main/default/objects/Opportunity/fields/Opportunity_Amount__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Amount__c</fullName>
    <description>OLI rollup excluding Revenue type - Travel expense</description>
    <label>Opportunity Amount (Excluding Expense)</label>
    <summarizedField>OpportunityLineItem.Total_Sales_Price__c</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Revenue_Type__c</field>
        <operation>contains</operation>
        <value>P - Professional Fees, F - Fees (Accreditation), C - Commission Revenue</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>