force-app/main/default/objects/Opportunity/fields/Opportunity_Number__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Number__c</fullName>
    <displayFormat>WO-{0000}</displayFormat>
    <label>Opportunity Number</label>
    <type>AutoNumber</type>
</CustomField>