force-app/main/default/objects/Opportunity/fields/Opportunity_Number_sf1__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Number_sf1__c</fullName>
    <description>This field is created to reference the old org Opportunity number</description>
    <label>Opportunity Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>