force-app/main/default/objects/Opportunity/fields/Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_Name__c</fullName>
    <formula>IF(ISBLANK(Owner.MiddleName) ,Owner.FirstName+&apos; &apos;+Owner.LastName,Owner.FirstName+&apos; &apos;+Owner.MiddleName+&apos; &apos;+Owner.LastName)</formula>
    <label>Owner Name</label>
    <type>Text</type>
</CustomField>